<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/initSpeedEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/initSpeedHint"
            android:text="@string/initSpeed" >
        </EditText>

        <EditText
            android:id="@+id/slowRateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/slowRateHint"
            android:text="@string/slowRate" />
    </LinearLayout>

    <TextView
        android:id="@+id/recordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="启动游戏" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="清除记录" />

    <TextView
        android:id="@+id/statmentText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/statment" />

</LinearLayout>